Implemented errors transferring Integrated errors logging in dlqs Renamed packages

--- a/examples/2-ms-with-shared-lib/msi-shared-lib/build.gradle
+++ b/examples/2-ms-with-shared-lib/msi-shared-lib/build.gradle
@@ -9,8 +9,8 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 dependencies {
-    api project(':services-weaver-rabbit-starter')
-    annotationProcessor project(':services-weaver-rabbit-processors')
+    api project(':')
+    annotationProcessor project(':')
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
