--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+plugins {
+    id 'org.springframework.boot' version '2.6.4'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java-library'
+}
+
+group = 'com.coddweaver'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
+
 allprojects {
     repositories {
         mavenCentral()
@@ -5,4 +15,23 @@ allprojects {
             url "https://plugins.gradle.org/m2/"
         }
     }
+}
+
+dependencies {
+    api 'org.springframework.boot:spring-boot-starter-amqp'
+    api group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.0'
+    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+    api group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+    implementation group: 'com.squareup', name: 'javapoet', version: '1.13.0'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+}
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
