--- a/examples/2-ms-with-shared-lib/recognition-manager/build.gradle
+++ b/examples/2-ms-with-shared-lib/recognition-manager/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
