--- a/examples/2-ms-with-shared-lib/repository-manager/build.gradle
+++ b/examples/2-ms-with-shared-lib/repository-manager/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
