--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ project(':library-api').projectDir = file("examples/2-ms-with-shared-lib/library
 include 'msi-shared-lib'
 project(':msi-shared-lib').projectDir = file("examples/2-ms-with-shared-lib/msi-shared-lib")
 
-include 'recognition-manager'
-project(':recognition-manager').projectDir = file("examples/2-ms-with-shared-lib/recognition-manager")
+include 'repository-manager'
+project(':repository-manager').projectDir = file("examples/2-ms-with-shared-lib/repository-manager")
