Small changes for gradle.

--- a/examples/2-ms-with-shared-lib/library-api/build.gradle
+++ b/examples/2-ms-with-shared-lib/library-api/build.gradle
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 dependencies {
-    implementation project(':msi-shared-lib')
+    implementation project(':examples-2-ms-with-shared-lib-msi-shared-lib')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
