--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,33 @@ plugins {
     id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java-library'
+    id 'maven-publish'
 }
 
 group = 'com.coddweaver'
 version = '1.0.0-SNAPSHOT'
-sourceCompatibility = '11'
+description = 'Seamless Talk (RabbitMQ) is a java library for easy and fast developing microservices\' communication on the RabbitMQ bus. ' +
+        'It wraps Spring AMQP mechanics by some automation, making it easier to develop software and waste less time to deal with RabbitMQ.' +
+        '\n\nMore can find at https://github.com/coddweaver/seamless-talk-rabbit'
+sourceCompatibility = '1.8'
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/coddweaver/seamless-talk-rabbit"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
 
 allprojects {
     repositories {
